--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
